--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /*border: 2px dashed green;*/
 }
 
 /*generics*/
@@ -10,9 +11,44 @@ body{
     font-family:'Montserrat', sans-serif;
 }
 
+
 img{
     width: 100%;
     display: block;
+}
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main{
+    flex-grow: 1;
+    display: flex;
+    overflow: auto;
+}
+
+footer{
+    justify-content: flex-end;
+    flex-shrink: 0;
+    height: 90px;
+
+    
+}
+
+header{
+    height: 90px;
+    flex-shrink: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin-left: 40px;
+    margin-right: 20px;
+    background-color: rgba(0, 255, 255, 0.314);
 }
 
 /*layout*/
@@ -20,6 +56,22 @@ img{
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.side-bar{
+    flex-basis: 40px;
+    flex-shrink: 0;
+}
+
+.main-card{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content{
+    flex-grow: 1;
+}
+
 
 /*color*/
 
