--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ img{
     display: block;
 }
 
+a{
+    display: block;
+    text-decoration: none;
+}
+
 .wrapper{
     width: 100%;
     height: 100vh;
@@ -48,7 +53,7 @@ header{
     z-index: 1;
     margin-left: 40px;
     margin-right: 20px;
-    background-color: rgba(0, 255, 255, 0.314);
+    background-color: #080B12;
 }
 
 /*layout*/
@@ -66,6 +71,7 @@ header{
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    background-color: #141922;
 }
 
 .main-content{
@@ -81,11 +87,27 @@ header{
 
 /*btn*/
 .btn{
-    border-radius: 20px; 
+    border-radius: 25px; 
+    border: 1px solid;
     border-color: transparent; 
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+.btn.btn-upgrade{
+    border-color: white;
+    background-color: transparent;
+    width: 175px;
+    height: 40px;
+    position: fixed;
+    top: 20px;
+    right: 25px;
+}
 /*utilities*/
+
+/*header*/
+
+header .btn a{
+    color: #fff;
+    font-size: 12px;
+}
