--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,9 @@ header{
     min-height: 275px;
     padding: 5px;
     display: flex;
-    justify-content: center;
-}
-
-.box-img{
-    width: 200px;
-    height: 200px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 /* text */
@@ -111,8 +108,13 @@ h2, h3, h4, .side-bar,
 }
 
 .playlist *, .playlist h2, 
-.account, .main-content nav a{
+.account, .main-content nav a, 
+.main-content figcaption h4{
     font-size: 12px;
+}
+
+.main-content figcaption h3{
+    font-size: 16px;
 }
 
 .main-content section h2{
@@ -121,7 +123,8 @@ h2, h3, h4, .side-bar,
 
 /*color*/
 .side-bar *, .nav-top img,
-.main-content nav a{
+.main-content nav a, 
+.main-content figcaption h4{
     /* grey light */
     color:#A0A1A0
 }
@@ -131,7 +134,8 @@ h2, h3, h4, .side-bar,
 }
 
 .playlist h2, .account h3,
-.main-content section h2{
+.main-content section h2,
+.main-content figcaption h3{
     /* white */
     color: #fff;
 }
@@ -285,11 +289,19 @@ header .btn a{
     justify-content: center;
 }
 
+.main-content figcaption{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    padding: 0 13px;
+}
+
 /* main-content - row recently played */
 
-.main-content section *{
+/* .main-content section *{
     border: 1px dashed gold;
-}
+} */
 
 #recently{
     margin-top: 75px;
