--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,14 @@ header{
     flex-grow: 1;   
 }
 /* micro layout */
-.row{
+.main-content .row{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     margin: 15px -5px 0 -5px;
 }
 
-.col{
+.main-content .col{
     width: 50%;
     min-height: 275px;
     padding: 5px;
@@ -142,8 +142,7 @@ h2, h3, h4, .side-bar,
 
 
 /*btn*/
-.btn{
-    border-radius: 25px; 
+.btn{ 
     border: 1px solid;
     border-color: transparent; 
     display: flex;
@@ -151,6 +150,7 @@ h2, h3, h4, .side-bar,
     align-items: center;
 }
 .btn.btn-upgrade{
+    border-radius: 25px; 
     border-color: white;
     background-color: transparent;
     width: 175px;
@@ -211,6 +211,7 @@ header .btn a{
 /* sidebar playlist */
 .playlist .to-hide{
     display: none;
+    margin-top: 15px;
 }
 
 .create-playlist{
@@ -310,6 +311,124 @@ header .btn a{
 #user-mix p, #popular p{
     margin: 10px 0 20px 0;
 }
+
+
+/* footer spotify console */
+
+footer .row{
+    width: 100%;
+    height: 100%;
+    background-color: #2D2C2B;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .row *{
+  border: 1px dashed orange;
+}
+
+.col-left, .col-right{
+    width: 150px;
+    align-self: center;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+   
+}
+
+.col-mid{
+    flex-basis: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* footer col mid */
+.console, .time-box{
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.console{
+    justify-content: center;
+    gap: 20px;
+}
+
+.console .btn{
+    height: 20px;
+    width: 20px;
+}
+
+.console .btn:nth-child(3){
+    height: 25px;
+    width: 25px;
+}
+
+.time-box{
+    justify-content: space-around;
+    gap: 10px;
+}
+.current-time, .time-song{
+    height: 5px;
+    min-width: 20px;
+}
+
+.time-bar{
+    flex-grow: 1;
+}
+
+/* footer col left */
+.col-left .box-img{
+    height: 40px;
+    width: 40px;
+}
+
+.song{
+    flex-grow: 1;
+    height: 40px;
+}
+
+.song *{
+    height: 12px;
+    margin-bottom: 1px;
+}
+
+.btn-row-left{
+    width:45px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* footer col right */
+.col-right ul{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+}
+
+.col-right ul li{
+    height: 20px;
+    width: 20px;
+}
+
+.col-right ul li:last-child{
+    height: 20px;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
 
 
 
