--- a/css/responsive.css
+++ b/css/responsive.css
@@ -59,6 +59,12 @@
     .col-left, .col-right{
         width: 200px;
     }
+
+    .song-info{
+        display: flex;
+        gap: 2px;
+    }
+
 }
 
 
@@ -78,6 +84,13 @@
         flex-basis: 25%;
         min-height: 170px;
     }
+
+    /* footer */
+    .btn-row-left{
+        flex-direction: row;
+        gap: 10px;
+    }
+
 
 }
 
