--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,6 @@ header{
     justify-content: flex-end;
 }
 
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 .side-bar{
     flex-basis: 40px;
     flex-shrink: 0;
@@ -103,8 +98,16 @@ header{
 /* text */
 h2, h3, h4, .side-bar,
 .main-content nav a,
-.main-content section *{
+.main-content section *,
+footer .time-box *,
+footer .col-left .song *{
     font-weight: 600;
+}
+
+footer .time-box *,
+footer .col-left .song *{
+    font-size: 10px;
+
 }
 
 .playlist *, .playlist h2, 
@@ -123,7 +126,8 @@ h2, h3, h4, .side-bar,
 .side-bar *, .nav-top img,
 .main-content nav a, 
 .main-content .info-cont h4,
-.main-content section p{
+.main-content section p,
+footer .col-left *{
     /* grey light */
     color:#A0A1A0
 }
@@ -134,9 +138,11 @@ h2, h3, h4, .side-bar,
 
 .playlist h2, .account h3,
 .main-content section h2,
-.main-content .info-cont h3{
+.main-content .info-cont h3,
+footer .col-left h4,
+footer .col-mid, footer .col-right{
     /* white */
-    color: #fff;
+    color: #FEFFFF;
 }
 /*bg*/
 
@@ -304,6 +310,11 @@ header .btn a{
     padding: 0 13px;
 }
 
+#popular .box-img{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 #user-mix , #popular {
     margin-top:25px;
 }
@@ -314,7 +325,6 @@ header .btn a{
 
 
 /* footer spotify console */
-
 footer .row{
     width: 100%;
     height: 100%;
@@ -323,17 +333,13 @@ footer .row{
     justify-content: space-between;
 }
 
-footer .row *{
-  border: 1px dashed orange;
-}
-
 .col-left, .col-right{
     width: 150px;
     align-self: center;
     display: flex;
     align-items: center;
     padding: 10px;
-   
+    gap: 5px;
 }
 
 .col-mid{
@@ -360,17 +366,17 @@ footer .row *{
     width: 20px;
 }
 
-.console .btn:nth-child(3){
-    height: 25px;
-    width: 25px;
+.console .btn:nth-child(3) i{
+    font-size: 30px;
 }
 
 .time-box{
     justify-content: space-around;
     gap: 10px;
+    padding-bottom: 20px;
 }
 .current-time, .time-song{
-    height: 5px;
+    min-height: 5px;
     min-width: 20px;
 }
 
@@ -399,6 +405,8 @@ footer .row *{
     height: 40px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 2px;
 }
 
 /* footer col right */
@@ -415,11 +423,28 @@ footer .row *{
 }
 
 .col-right ul li:last-child{
-    height: 20px;
+    height: 4px;
     flex-grow: 1;
-    display: flex;
-    align-items: center;
 }
+
+/* volume-bar and song-time-bar */
+.time-bar, .volume{
+    background-color: #5C5C5C;
+    border: 2px solid #5C5C5C;
+    border-radius: 20px;
+}
+
+.timebar-current, .volume-current{
+    top: 0;
+    left: 0;
+    width: 25%;
+    border: 1px solid #BEBEBE;
+    border-radius: 20px;
+}
+
+
+
+
 
 
 
